Imagies alignment fixed

--- a/styles/_grid-imagies.scss
+++ b/styles/_grid-imagies.scss
@@ -53,7 +53,8 @@
                         overflow: hidden;
 
                         .gib_block_set{
-                            display: grid;
+                            display: flex;
+                            flex-direction: column;
                             min-height: 100%;
                         }
                         .gib_heading {
@@ -112,15 +113,18 @@
                         }
 
                         .gib_img {
-                            height: 100%;
+                            display: flex;
+                            min-height: 100%;
                             width: 100%;
+                           flex-grow: 1;
                             // aspect-ratio: 1/1;
                             img {
-                                max-width: 100%;
-                                height: 100%;
-                                object-fit: cover;
+                                max-width: 100%;                               
+                                object-fit: fill;
                                 width: 100%;
                                 border-radius: 0 0 16px 16px;
+                                min-height: 100%;
+                                flex-grow: 1;
                             }
                         }
 
